...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/app_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:fillViewport="true"
        android:scrollbars="none">

...

        <include
            android:id="@+id/home_group"
            layout="@layout/view_home" />

        <include
            android:id="@+id/settings_group"
            layout="@layout/view_settings" />

        <LinearLayout
            android:id="@+id/connect_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/connect_explanation"
                android:textAppearance="?attr/textAppearanceBodyMedium" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/provider_button"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/hetzner_provider" />
            <com.google.android.material.textfield.TextInputLayout
...
